arma-rs/tests/derive/fail_union.stderr
error: Unions aren't supported
 --> tests/derive/fail_union.rs:3:10
  |
3 | #[derive(IntoArma, FromArma)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `IntoArma` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unions aren't supported
 --> tests/derive/fail_union.rs:3:20
  |
3 | #[derive(IntoArma, FromArma)]
  |                    ^^^^^^^^
  |
  = note: this error originates in the derive macro `FromArma` (in Nightly builds, run with -Z macro-backtrace for more info)
